--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-slot": "^1.1.0",
     "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.16.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^18.3.1",
